--- a/src/app/features/queueing-layout/queue-display/queue-display.component.html
+++ b/src/app/features/queueing-layout/queue-display/queue-display.component.html
@@ -40,14 +40,18 @@
           <div class="currency-icon">
             <img src="assets/queue-display/currency.png" alt="USD Icon">
           </div>
-          <div class="currency-value">
-            <span>₱57.804</span>
-            <span class="change">+0.1208</span>
+          <div class="currency-details">
+            <div class="currency-label">USD</div>
+            <div class="currency-value">
+              <span>₱57.804</span>
+              <span class="change">+0.1208</span>
+            </div>
           </div>
-        </div>        
+        </div>
+
         <div class="time-info">
-          <div>Manila (GMT +8)</div>
-          <div class="time">3:41:34 PM</div>
+          <div class="time-location">Manila (GMT +8)</div>
+          <div class="time-value">3:41:34 PM</div>
         </div>
       </div>
 
@@ -60,8 +64,9 @@
         </div>
       </div>
 
+      <!-- Up Next Section -->
       <div class="up-next-section">
-        <h3>UP NEXT</h3>
+        <h3 class="upnext">UP NEXT</h3>
         <div class="up-next-list">
           <div class="up-next-item">
             <img src="/assets/queue-display/Male_2.png" alt="Avatar" class="avatar">
@@ -80,11 +85,16 @@
           </div>
           <div class="up-next-item">
             <img src="/assets/queue-display/female_1.png" alt="Avatar" class="avatar">
-            <span class="up-next-ticket-number">R-21321917</span>
+            <span class="up-next-ticket-number">R-213217</span>
             <span class="up-next-person-name">Kenneth Felix Belga</span>
           </div>
         </div>
-      </div>      
+      </div>
     </div>
+  </div>
+
+  <!-- Announcement Section -->
+  <div class="announcement-bar">
+    <p>Announcement -- Announcement -- Announcement -- Announcement -- Announcement</p>
   </div>
 </div>
