--- a/src/app/features/admin-layout/a-user-management/a-user-management.component.html
+++ b/src/app/features/admin-layout/a-user-management/a-user-management.component.html
@@ -1,11 +1,8 @@
 <main class="min-h-screen bg-gradient-to-br from-gray-100 to-gray-200 px-14 py-6">
   <div class=" mx-auto space-y-6">
-    <div class="h-48 bg-gradient-to-r from-gray-400 via-gray-500 to-gray-600 rounded-3xl shadow-xl overflow-hidden relative">
-      <img src="path_to_visayas_state_university_image.jpg" class="w-full h-full object-cover mix-blend-overlay opacity-60">
-      <div class="absolute inset-0 flex items-center justify-center">
-        <p class="font-semibold text-gray-800 text-lg">picture digdi</p>
-
-      </div>
+    <div class="  rounded-3xl shadow-xl overflow-hidden relative">
+      <img src="assets/logo/vsuHeader.png" class="w-full h-full object-contain ">
+    
     </div>
 
     <div class="flex space-x-6">
@@ -127,3 +124,11 @@
     </div>
   </div>
 </main>
+
+<!-- <app-create-account-modal
+  *ngIf="showModal"
+  [editingUser]="selectedUser"
+  [existingUsers]="users"
+  (close)="closeModal()"
+  (accountCreated)="onAccountCreated($event)">
+</app-create-account-modal> -->
