--- a/src/app/features/admin-layout/a-user-management/a-user-management.component.html
+++ b/src/app/features/admin-layout/a-user-management/a-user-management.component.html
@@ -10,8 +10,8 @@
         <h2 class="text-2xl font-semibold mb-6 text-gray-800 border-b pb-2">Performance Metrics</h2>
         
         <div *ngIf="currentUser" class="bg-gradient-to-r from-gray-50 to-gray-50 rounded-2xl shadow-md px-4 py-2 flex items-center space-x-4 mb-6 border border-gray-50">
-          <div class="w-16 h-16 bg-blue-500 rounded-full overflow-hidden border-4 border-white shadow-inner">
-            <img src="assets/logo/bini.jpg" alt="{{ currentUser.fullname }}" class="w-full h-full object-cover">
+          <div class="w-16 h-16   rounded-full overflow-hidden border-4 border-white shadow-inner">
+            <img [src]="currentUser.profile || 'assets/default.jpg' " alt="{{ currentUser.fullname }}"  class="w-full h-full object-cover">
           </div>
           <div>
             <p class="font-semibold text-gray-800 text-lg">{{ currentUser.fullname }}</p>
@@ -88,9 +88,10 @@
       </tr>
     </thead>
     <tbody class="divide-y divide-gray-200">
-      <tr *ngFor="let user of filteredUsers; let even = even" 
+      <tr (click)="viewUserDetails(user)" *ngFor="let user of filteredUsers; let even = even" 
           [ngClass]="{'bg-gray-50': even}"
-          class="hover:bg-green-50 transition-colors duration-200">
+          class="hover:bg-green-300 hover:text-white transition-colors duration-200">
+         
         <td class="p-3 text-sm">{{ user.username }}</td>
         <td class="p-3 text-sm">{{ user.fullname }}</td>
         <td class="p-3 text-sm">{{ user.division }}</td>
@@ -103,12 +104,14 @@
         </td>
         <td class="p-3">
           <div class="flex space-x-2">
-            <button (click)="viewUserDetails(user)" class="text-green-600 hover:text-green-800 transition-colors duration-200 p-1 rounded-full hover:bg-green-100">
+           
+            <button (click)="editUser(user)" class="text-green-600 hover:text-green-800 transition-colors duration-200 p-1 rounded-full hover:bg-green-100">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
                 <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
               </svg>
             </button>
+            
             <button (click)="deleteUser(user)" class="text-red-600 hover:text-red-800 transition-colors duration-200 p-1 rounded-full hover:bg-red-100">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
@@ -125,10 +128,10 @@
   </div>
 </main>
 
-<!-- <app-create-account-modal
+<app-create-account-modal
   *ngIf="showModal"
-  [editingUser]="selectedUser"
-  [existingUsers]="users"
-  (close)="closeModal()"
+  [editingUser]="!!selectedUser"
+  [user]="selectedUser"
+  (closeModal)="closeModal()"
   (accountCreated)="onAccountCreated($event)">
-</app-create-account-modal> -->
+</app-create-account-modal>
