--- a/src/app/features/desk-attendant-layout/desk-attendant-layout.component.html
+++ b/src/app/features/desk-attendant-layout/desk-attendant-layout.component.html
@@ -1,6 +1,6 @@
 <div class="h-screen w-screen flex overflow-hidden">
   <!-- Sidebar -->
-  <app-da-sidebar></app-da-sidebar>
+  <app-sidebar [role]="role"></app-sidebar>
 
   <!-- Main Content -->
   <div class="flex-1 overflow-auto bg-gray-100">
