--- a/src/app/features/admin-layout/admin-layout.component.html
+++ b/src/app/features/admin-layout/admin-layout.component.html
@@ -1,12 +1,13 @@
 <div class="h-screen w-screen flex overflow-hidden">
   <!-- Sidebar -->
-  <app-sidebar></app-sidebar>
+  <app-sidebar [role]="role"></app-sidebar>
 
   
   <!-- Main Content -->
-  <div class="flex-1 overflow-auto bg-gray-100">
+  <div class="flex-1 flex flex-col overflow-auto bg-gray-100">
     <app-header > </app-header>
-
-    <router-outlet></router-outlet>
+    <div class="w-full flex-1 py-6 px-14">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
