--- a/src/app/features/admin-layout/dashboard/dashboard.component.html
+++ b/src/app/features/admin-layout/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<section class="w-full min-h-screen p-4">
-  <div class="mx-auto max-w-[90%] w-full">
+<section class="w-full min-h-screen ">
+  <div class="mx-auto  w-full">
     <header class="flex flex-wrap items-center justify-between w-full mb-10">
       <div>
         <h1 class="text-4xl font-bold text-gray-900">Admin Dashboard</h1>
