--- a/src/app/features/admin-layout/kiosk-management/kiosk-management.component.html
+++ b/src/app/features/admin-layout/kiosk-management/kiosk-management.component.html
@@ -1,4 +1,4 @@
-<main class="flex flex-col p-20 bg-white-100 min-h-screen">
+<main class="flex flex-col  bg-white-100">
 
 
   <section class="bg-white rounded-3xl shadow-lg overflow-hidden transform hover:shadow-xl transition-all duration-300">
