--- a/src/app/features/admin-layout/content-management/content-management.component.html
+++ b/src/app/features/admin-layout/content-management/content-management.component.html
@@ -25,7 +25,7 @@
                         <!-- Logo Input -->
                         <div class="flex flex-col">
                             <label for="logo" class=" text-gray-800 px-1">Logo</label>
-                            <div (click)="logoInput.click()"  class="w-full h-12 rounded-md 
+                            <div (click)="logoInput.click()"  class="w-full h-10 rounded-md 
                                 transition-all
                                 hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                 text-gray-400
@@ -39,7 +39,7 @@
                         <!-- Background Image Input -->
                         <div class="flex flex-col">
                             <label for="background" class=" text-gray-800 px-1">Background Image</label>
-                            <div (click)="bgInput.click()"   class="w-full h-12 rounded-md 
+                            <div (click)="bgInput.click()"   class="w-full h-10 rounded-md 
                                 transition-all
                                 hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                 text-gray-400
@@ -52,8 +52,15 @@
                         </div>
                         <!-- Video Input -->
                         <div class="flex flex-col">
-                            <label for="video" class=" text-gray-800 px-1">Video</label>
-                            <div (click)="videoInput.click()"  class="w-full h-12 rounded-md 
+                            <label for="video" class=" text-gray-800 px-1 flex justify-between">
+                                <span>Video</span>
+                                <span class="flex gap-2 items-center">
+                                    <span class="material-icons  {{toggles.videoURL ? 'text-green-600':'text-gray-500'}}"> link </span> 
+                                    <app-toggle body="w-10 h-5" knob="w-3 h-3" translate="translate-x-5" [(isActive)]="toggles.videoURL"></app-toggle>
+                                </span>
+                            </label>
+                            <ng-container *ngIf="!toggles.videoURL;else videoURL">
+                                <div (click)="videoInput.click()"  class="w-full h-10 rounded-md 
                                 transition-all
                                 hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                 text-gray-400
@@ -62,7 +69,19 @@
                                     <span class="w-full max-w-60 overflow-hidden text-ellipsis whitespace-nowrap">{{files.video != undefined ? files.video.name :inputFields.videoUrl ? getLastDirectory(inputFields.videoUrl): 'Choose Video File'}}</span>
                                     <span class="material-icons"> upload_file </span>
                                 </div>
-                            <input (change)="onFileChange('video', $event)" accept="video/*" name="video" #videoInput class="hidden" type="file">
+                                <input (change)="onFileChange('video', $event)" accept="video/*" name="video" #videoInput class="hidden" type="file">
+                            </ng-container>
+                            <ng-template #videoURL>
+                                <div  class="w-full h-10 rounded-md 
+                                transition-all
+                                hover:border-green-600 hover:text-green-700 hover:bg-green-100
+                                text-gray-400
+                                border-gray-300 border-2 border-solid 
+                                bg-white cursor-pointer select-none flex items-center px-2 justify-between"> 
+                                    <input [(ngModel)]="inputFields.youtubeURL" placeholder="Enter a youtube link" type="text" class="w-full h-full bg-transparent border-none outline-none">
+                                    <span class="material-icons"> link </span>
+                                </div>
+                            </ng-template>
                         </div>
                     </div>
                 </div>
@@ -90,23 +109,10 @@
                         <!-- Time -->
                         <div class="p-1 border-2 border-gray-300 border-dashed hover:border-green-600 hover:bg-green-100 rounded-md">
                             <div class="flex flex-col">
-                                <div class="flex flex-row w-full justify-between mb-1" >
+                                <div class="flex flex-row w-full justify-between items-center" >
                                     <label class="text-lg text-gray-800 px-1">Time/Clock</label>
                                     <div>
-                                        <input [(ngModel)]="toggles.time" #timeToggle type="checkbox" id="toggle" class="hidden">
-                                        <div (click)="timeToggle.click()" class="flex items-center cursor-pointer">
-                                            <div class="relative">
-                                                <div class="block  w-12 h-7 rounded-full "
-                                                    [ngClass]="{
-                                                        'bg-green-500': toggles.time,
-                                                        'bg-gray-400': !toggles.time
-                                                    }"
-                                                ></div>
-                                                <div class="dot absolute left-1 top-1 bg-white w-5 h-5 rounded-full transition-transform duration-300 ease-in-out"
-                                                    [ngClass]="{'translate-x-5': toggles.time}"
-                                                ></div>
-                                            </div>
-                                        </div>
+                                        <app-toggle  body="w-10 h-5" knob="w-3 h-3" translate="translate-x-5" [(isActive)]="toggles.time"></app-toggle>
                                     </div>
                                 </div>
                             </div>
@@ -114,23 +120,10 @@
                         <!-- Weather -->
                         <div class="p-1 border-2 border-gray-300 border-dashed hover:border-green-600 hover:bg-green-100 rounded-md">
                             <div class="flex flex-col">
-                                <div class="flex flex-row w-full justify-between mb-1" >
+                                <div class="flex flex-row w-full justify-between items-center" >
                                     <label  class="text-lg text-gray-800 px-1">Weather View</label>
                                     <div>
-                                        <input [(ngModel)]="toggles.weather" #weatherToggle type="checkbox" id="toggle" class="hidden">
-                                        <div (click)="weatherToggle.click()" class="flex items-center cursor-pointer">
-                                            <div class="relative">
-                                                <div class="block  w-12 h-7 rounded-full "
-                                                    [ngClass]="{
-                                                        'bg-green-500': toggles.weather,
-                                                        'bg-gray-400': !toggles.weather
-                                                    }"
-                                                ></div>
-                                                <div class="dot absolute left-1 top-1 bg-white w-5 h-5 rounded-full transition-transform duration-300 ease-in-out"
-                                                    [ngClass]="{'translate-x-5': toggles.weather}"
-                                                ></div>
-                                            </div>
-                                        </div>
+                                        <app-toggle  body="w-10 h-5" knob="w-3 h-3" translate="translate-x-5" [(isActive)]="toggles.weather"></app-toggle>
                                     </div>
                                 </div>
                             </div>
@@ -138,23 +131,10 @@
                         <!-- Currency -->
                         <div class="p-1 border-2 border-gray-300 border-dashed hover:border-green-600 hover:bg-green-100 rounded-md">
                             <div class="flex flex-col">
-                                <div class="flex flex-row w-full justify-between mb-1" >
+                                <div class="flex flex-row w-full justify-between items-center" >
                                     <label  class="text-lg text-gray-800 px-1">Currency Converter</label>
                                     <div>
-                                        <input [(ngModel)]="toggles.currency" #currencyToggle type="checkbox" id="toggle" class="hidden">
-                                        <div (click)="currencyToggle.click()" class="flex items-center cursor-pointer">
-                                            <div class="relative">
-                                                <div class="block  w-12 h-7 rounded-full "
-                                                    [ngClass]="{
-                                                        'bg-green-500': toggles.currency,
-                                                        'bg-gray-400': !toggles.currency
-                                                    }"
-                                                ></div>
-                                                <div class="dot absolute left-1 top-1 bg-white w-5 h-5 rounded-full transition-transform duration-300 ease-in-out"
-                                                    [ngClass]="{'translate-x-5': toggles.currency}"
-                                                ></div>
-                                            </div>
-                                        </div>
+                                        <app-toggle  body="w-10 h-5" knob="w-3 h-3" translate="translate-x-5" [(isActive)]="toggles.currency"></app-toggle>
                                     </div>
                                 </div>
                             </div>
@@ -191,7 +171,7 @@
                                 <!-- Primary Background Input -->
                                 <div class="flex flex-col">
                                     <label  class=" text-gray-800 px-1">Primary Background</label>
-                                    <input [(ngModel)]="colors.primary_bg" class="w-full h-12 rounded-md 
+                                    <input [(ngModel)]="colors.primary_bg" class="w-full h-10 rounded-md 
                                     transition-all
                                     hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                     text-gray-400
@@ -201,7 +181,7 @@
                                 <!-- Secondary Background Input -->
                                 <div class="flex flex-col">
                                     <label class=" text-gray-800 px-1">Secondary Background</label>
-                                    <input [(ngModel)]="colors.secondary_bg" class="w-full h-12 rounded-md 
+                                    <input [(ngModel)]="colors.secondary_bg" class="w-full h-10 rounded-md 
                                     transition-all
                                     hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                     text-gray-400
@@ -211,7 +191,7 @@
                                 <!-- Tertiary Background Input -->
                                 <div  class="flex flex-col">
                                     <label  class=" text-gray-800 px-1">Tertiary Background</label>
-                                    <input [(ngModel)]="colors.tertiary_bg" class="w-full h-12 rounded-md 
+                                    <input [(ngModel)]="colors.tertiary_bg" class="w-full h-10 rounded-md 
                                     transition-all
                                     hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                     text-gray-400
@@ -224,7 +204,7 @@
                                 <!-- Primary Background Input -->
                                 <div class="flex flex-col ">
                                     <label  class=" text-gray-800 px-1">Primary Text</label>
-                                    <input [(ngModel)]="colors.primary_text" class="w-full h-12 rounded-md 
+                                    <input [(ngModel)]="colors.primary_text" class="w-full h-10 rounded-md 
                                     transition-all
                                     hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                     text-gray-400
@@ -234,7 +214,7 @@
                                 <!-- Secondary Background Input -->
                                 <div class="flex flex-col">
                                     <label class=" text-gray-800 px-1">Secondary Text</label>
-                                    <input [(ngModel)]="colors.secondary_text" class="w-full h-12 rounded-md 
+                                    <input [(ngModel)]="colors.secondary_text" class="w-full h-10 rounded-md 
                                     transition-all
                                     hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                     text-gray-400
@@ -244,7 +224,7 @@
                                 <!-- Tertiary Background Input -->
                                 <div  class="flex flex-col">
                                     <label  class=" text-gray-800 px-1">Tertiary Text</label>
-                                    <input [(ngModel)]="colors.tertiary_text" class="w-full h-12 rounded-md 
+                                    <input [(ngModel)]="colors.tertiary_text" class="w-full h-10 rounded-md 
                                     transition-all
                                     hover:border-green-600 hover:text-green-700 hover:bg-green-100
                                     text-gray-400
@@ -265,11 +245,10 @@
                 [ngClass]="{'hover:bg-green-100 hover:border-green-600':!collapsables.announcements}"
                 >
                     <div (click)="toggleCollapse('announcements')" class="text-lg  px-2 py-2 flex items-center justify-between">
-                        <div class="flex flex-row justify-between w-full gap-2 mb-1" >
+                        <div class="flex flex-row justify-between w-full gap-2 items-center" >
                             <label for="announcement" class="text-lg text-gray-800 px-1">Announcements</label>
                             <div>
-                                <app-toggle dimensions="
-                                w-12 h-7" [(isActive)]="toggles.announcements"></app-toggle>
+                                <app-toggle  body="w-10 h-5" knob="w-3 h-3" translate="translate-x-5" [(isActive)]="toggles.announcements"></app-toggle>
                             </div>
                         </div>
                         <span *ngIf="!collapsables.announcements" class="material-icons"> keyboard_arrow_down </span>
